# aoc

./: README.md
2015/rust/: Cargo.toml
2015/rust/src/: main.rs
2015/rust/src/day1/: mod.rs
2015/rust/src/day12/: mod.rs
2015/rust/src/day2/: mod.rs
2015/rust/src/day3/: mod.rs
2015/rust/src/day4/: mod.rs
2015/rust/src/day5/: mod.rs
2015/rust/src/day6/: mod.rs
2015/rust/src/day7/: mod.rs
2016/rust/src/: main.rs
2020/rust/src/: main.rs  utils.rs
2021/rust/: Cargo.toml
2021/rust/day1/src/: main.rs
2021/rust/input/: day4
2021/rust/src/: main.rs
2021/rust/src/day1/: mod.rs
2021/rust/src/day10/: mod.rs
2021/rust/src/day11/: mod.rs
2021/rust/src/day12/: mod.rs
2021/rust/src/day13/: mod.rs
2021/rust/src/day14/: mod.rs
2021/rust/src/day15/: mod.rs
2021/rust/src/day16/: mod.rs
2021/rust/src/day17/: mod.rs
2021/rust/src/day18/: mod.rs
2021/rust/src/day19/: mod.rs
2021/rust/src/day2/: mod.rs
2021/rust/src/day20/: mod.rs
2021/rust/src/day21/: mod.rs
2021/rust/src/day22/: mod.rs
2021/rust/src/day23/: mod.rs
2021/rust/src/day24/: mod.rs
2021/rust/src/day25/: mod.rs
2021/rust/src/day3/: mod.rs
2021/rust/src/day4/: board.rs  mod.rs
2021/rust/src/day5/: mod.rs
2021/rust/src/day6/: mod.rs
2021/rust/src/day7/: mod.rs
2021/rust/src/day8/: mod.rs
2021/rust/src/day9/: mod.rs
2021/rust/src/utils/: mod.rs  sort.rs  stack.rs
2022/rust/: Cargo.toml
2022/rust/src/: main.rs
2023/rust/: Cargo.toml
2023/rust/src/: main.rs
2024/rust/src/: main.rs
2025/rust/input/: day10
2025/rust/src/: main.rs
(+65 files in other folders)
