[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Falak R Wani <falakreyaz@gmail.com>"]
description = "Solution for AOC 2021 in rust -- me trying to learn rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
serde_scan = "0.4.1"
